CCD-3086 Add JDK 17 to BEFTA Framework (#174)
CCD-3086 Add JDK 17 to BEFTA Framework
* JDK 17 declared in gradle.build
* Bump Gradle to 8.7, updating most dependencies to near latest, plus fixes
* --add-opens jvm args added to allow reflection
* sourceCompatibility replaced by languageVersion = JavaLanguageVersion.of(17)
* targetCompatibility added
* try catch put around setAccessible() method, java 17 toolchain config added to build.gradle
* try catch scope reduced to InaccessibleObjectException
* extra logging added to help see the accessibility level of the field.
* Fix jitpack versions
* README.md updated

---------

Co-authored-by: MSancaktutar <mutlu.sancaktutar@hmcts.net>
Co-authored-by: Ben Lang <132359359+lang-ben@users.noreply.github.com>