@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'maven-publish'
+    id 'com.github.ben-manes.versions' version '0.51.0'
 }
 
 apply plugin: 'java'
@@ -38,8 +39,7 @@ repositories {
 // end::repositories[]
 
 ext {
-    junitJupiterVersion = '5.2.0'
-    junitVintageVersion = '5.2.0'
+    junitJupiterVersion = '5.10.2'
     definitionConverterMain = "uk.gov.hmcts.befta.dse.ccd.DefinitionConverter"
 }
 
@@ -48,12 +48,12 @@ jar {
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
-    classifier = 'sources'
+    archiveClassifier = 'sources'
     from sourceSets.main.allSource
 }
 
 task javadocJar(type: Jar, dependsOn: javadoc) {
-    classifier = 'javadoc'
+    archiveClassifier = 'javadoc'
     from javadoc.destinationDir
 }
 tasks.withType(Test) {
@@ -67,6 +67,11 @@ tasks.withType(Test) {
 test {
   failFast = false
   testLogging.showStandardStreams = true
+  jvmArgs = [
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED"
+  ]
 }
 
 artifacts {
@@ -135,42 +140,45 @@ publishing {
 wrapper.gradleVersion = '2.10'
 
 dependencies {
-    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.0'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.17.1'
 
-    implementation group: 'io.rest-assured', name: 'rest-assured', version: '4.4.0'
+    implementation group: 'io.rest-assured', name: 'rest-assured', version: '5.4.0'
 
-    // NB: these libraries will often be used by the custom BeftaRunner and BeftaAdapter classes in each repo using BEFTA
-    api group: 'io.cucumber', name: 'cucumber-java', version: '5.7.0'
-    api group: 'io.cucumber', name: 'cucumber-junit', version: '5.7.0'
+    implementation group: 'io.cucumber', name: 'cucumber-java', version: '7.17.0'
+    implementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.17.0'
 
-    implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
-    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.4'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
 
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.13'
 
-    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '3.1.4'
-    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.12'
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+    implementation group: 'com.github.hmcts', name: 'service-auth-provider-java-client', version: '5.1.2'
+    implementation group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.4.16'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0'
 
-    implementation group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+    implementation group: 'com.google.guava', name: 'guava', version: '33.2.0-jre'
 
-    implementation group: 'org.apache.poi', name: 'poi', version: '4.0.0'
-    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.0'
+    implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
+
+    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.2.5'
+    implementation 'org.springframework.cloud:spring-cloud-openfeign-core:4.1.1'
+    implementation 'org.aspectj:aspectjweaver:1.9.22'
 
     implementation group: 'com.github.rholder', name: 'guava-retrying', version: '2.0.0'
 
-    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.+'
-    implementation group: 'org.json', name: 'json', version: '20200518'
+    implementation group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '7.4.1'
+    implementation group: 'org.json', name: 'json', version: '20240303'
 
-    testImplementation group: 'io.github.openfeign', name: 'feign-jackson', version: '9.7.0'
-    testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.3.3'
-    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.4.0'
-    testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '0.9.0'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
-    testRuntimeOnly  "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
-    testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.5.2'
-    testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.6.2'
+    implementation group: 'io.github.openfeign', name: 'feign-jackson', version: '13.2.1'
+    testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.12.0'
+    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '5.2.0'
+    testImplementation group: 'org.junit-pioneer', name: 'junit-pioneer', version: '2.2.0'
+    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junitJupiterVersion}"
+    testImplementation  group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: "${junitJupiterVersion}"
+    testRuntimeOnly  group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junitJupiterVersion}"
+    testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-commons', version: '1.10.2'
+    testRuntimeOnly  group: 'org.junit.platform', name: 'junit-platform-engine', version: '1.10.2'
 
 }
 // end::dependencies[]
@@ -194,4 +202,14 @@ def getCaseTypes() {
     }
     // TODO: Hardcode case types which are only available in spreadsheets and add to the list?
     return caseTypes
+}
+
+compileJava {
+    options.incremental = false
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
 }
